# pso_gc_tools

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bindat_to_gcdl.c  bindat_to_gcdl.md  decrypt_packets.c  decrypt_packets.md  defs.h  fuzziqer_prs.c  fuzziqer_prs.h  gci_extract.c  gci_extract.md  gen_qst_header.c  gen_qst_header.md  quest_info.c  quest_info.md  quests.c  quests.h  retvals.h  textconv.c  textconv.h  utils.c  utils.h
decrypt_packets/: Cargo.toml  README.md  main.c
decrypt_packets/src/: main.rs  pcap.rs
gci_quest_extract/: Cargo.toml  README.md
gci_quest_extract/src/: gci.rs  lib.rs  main.rs
psogc_quest_tool/: Cargo.toml  README.md
psogc_quest_tool/src/: convert.rs  info.rs  lib.rs  main.rs
psoutils/: Cargo.toml  README.md
psoutils/assets/test/: q058-ret-gc.online.qst  q118-vr-gc.offline.qst  q118-vr-gc.online.qst
psoutils/src/: bytes.rs  compression.rs  encryption.rs  lib.rs  packets.rs  quest.rs  text.rs  utils.rs
psoutils/src/packets/: init.rs  quest.rs
psoutils/src/quest/: bin.rs  dat.rs  qst.rs
test-assets/: q058-ret-gc.offline.qst
