[package]
name = "decrypt_packets"
version = "0.1.0"
authors = ["gered <gered@blarg.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
thiserror = "1.0.24"
pcap = "0.8.1"
etherparse = "0.9.0"
libc = "0.2.94"
pretty-hex = "0.2.1"

[dependencies.psoutils]
path = "../psoutils"
