[package]
name = "gci_quest_extract"
version = "0.1.0"
authors = ["gered <gered@blarg.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
byteorder = "1.4.3"

[dependencies.psoutils]
path = "../psoutils"