[package]
name = "psoutils"
version = "0.1.0"
authors = ["gered <gered@blarg.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0.24"
encoding_rs = "0.8.28"
libc = "0.2.94"
rand = "0.8.3"
itertools = "0.10.0"

[dev-dependencies]
claim = "0.5.0"
pretty-hex = "0.2.1"
tempfile = "3.2.0"
